--- a/navigationbar.css
+++ b/navigationbar.css
@@ -39,4 +39,18 @@ nav{
     cursor: pointer;
 }
 
+/* tablet and desktop */ @media(min-width:768px){
+    .menu{
+        display: flex;
+        flex-direction: row;
+        position: static;
+        background:none;
+        width: auto;
+    }
+    .hamburger{
+        display: none;
+    }
+}
+
+
 
